<resources>
    <string name="app_name">全栈技术</string>
    <string name="no_network">网络不给力</string>
    <string name="fail_connet">连接服务器失败，请稍后再试！</string>

    <!--主菜单-->
    <string name="android">android</string>
    <string name="ios">IOS</string>
    <string name="frontEnd">前端</string>
    <string name="welfare">福利</string>
    <!--android-->
    <string name="androidTech">Android 技术</string>

    <!--ios-->
    <string name="iosTech">IOS 技术</string>

    <!--front-end-->
    <string name="frontendTech">前端技术</string>

    <!--welfare-->

    <!--user-->
    <string name="login">登陆</string>
    <string name="other">other</string>
    <string name="modifyInfo">修改信息</string>
    <string name="message">消息</string>
    <string name="collection">收藏</string>
    <string name="setting">设置</string>
    <string name="publish">我发布的:</string>
    <string name="aboutMe">关于全栈技术</string>
    <string name="edition">1.0.0</string>
    <string name="eMail">客服邮箱</string>
    <string name="eMailContext">1136447460@qq.com</string>
    <string name="recommendToFriend">推荐给朋友</string>
    <string name="logout">退出登录</string>
    <string name="recommend">推荐</string>
    <string name="cacheClean">清除缓存</string>
    <string name="userFeedback">用户反馈</string>
    <string name="editionUpdate">检查更新</string>
    <string name="feedback">反馈</string>
    <string name="feedbackTitleHint">Title</string>
    <string name="contactInformation">Contact information</string>
    <string name="commit">提交</string>
    <string name="changeProfile">更换头像</string>

    <string name="school_life">校园生活</string>
    <string name="technology_gank">技术干货</string>
    <string name="user">我的</string>
    <string name="personalCenter">个人中心</string>
    <string name="next">更多</string>
    <string name="gank_more_android">Android</string>
    <string name="gank_more_ios">IOS</string>
    <string name="gank_more_web">前端</string>
    <string name="gank_more_expand">拓展资源</string>
    <string name="gank_more_frag_updata_hint">正在刷新数据中...</string>
    <string name="back_text">返回</string>
    <string name="technology_gank_daily_text">今日推荐</string>
    <string name="technogy_gank_more_text">更多干货</string>
    <string name="copyright">Copyright (c) 2017 lilei</string>

    <!--login-->
    <string name="inputAccountNum">请输入账号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="forgetThePassword">忘记密码？</string>
    <string name="toRegister">新用户注册</string>
    <string name="agree">登陆即代表阅读并同意</string>
    <string name="agreement">服务条款</string>
    <string name="userName">用户名</string>
    <string name="register">注册</string>
    <string name="registerAndLogin">注册并登陆</string>
    <string name="error_invalid_email">邮件格式错误</string>
    <string name="error_invalid_password">密码应大于 4 位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">这个是必填项</string>
    <string name="error_not_equals">请输入相同密码</string>
    <string name="unlogin">未登录</string>
    <string name="noCollection">还没有收藏哦，四处逛逛吧！</string>
    <string name="noMessage">还没有消息哦，四处逛逛吧！</string>
    <string name="noPublish">还没有发布过哦？发一篇？</string>
    <string name="tryAgain">没成功，再试试吧</string>

</resources>
