<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
    android:id="@+id/login_surfaceView_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/lily_center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_accountNum"
            android:hint="@string/inputAccountNum"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/login_password"
            android:layout_marginTop="8dp"
            android:textColor="#ffffff"
            android:hint="@string/inputPassword"
            android:textColorHint="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login_loginButton"
            android:text="@string/login"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_botton" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/login_forgetPassword"
                android:clickable="true"
                android:text="@string/forgetThePassword"
                android:textColor="#2673b3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/login_toRegister"
                android:clickable="true"
                android:text="@string/toRegister"
                android:gravity="right"
                android:textColor="#2673b3"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:layout_above="@id/lily_center"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:src="@mipmap/logo"/>
    <!--android:layout_width="190dp"-->

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/agree"
            android:text="@string/agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/login_agreement"
            android:clickable="true"
            android:text="@string/agreement"
            android:textColor="#2673b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
