<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_simple"/>

    <EditText
        android:id="@+id/user_setting_feedback_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/user_feedback_title_round"
        android:hint="@string/feedbackTitleHint"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/userEdition"/>

    <EditText
        android:id="@+id/user_setting_feedback_contactInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:layout_margin="16dp"
        android:background="@null"
        android:maxLines="12"
        android:hint="@string/contactInformation"
        android:textSize="12sp"
        android:gravity="left|top" />

    <Button
        android:id="@+id/user_setting_feedback_commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/commit"
        android:textColor="@color/userChildLayoutText"
        android:background="@drawable/user_button_commit"/>
</LinearLayout>