<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/userChildLayoutToolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/user_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back"
                android:layout_centerVertical="true"
                android:background="@color/userChildLayoutToolbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:textColor="@color/userChildLayoutText"
                android:text="@string/setting"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/user_setting_feedback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/userChildTextBlack"
            android:drawableRight="@mipmap/user_arrow_right"
            android:text="@string/userFeedback"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />

        <!--<TextView-->
            <!--android:id="@+id/user_setting_recommendCondition"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:textColor="@color/userChildTextBlack"-->
            <!--android:text="@string/recommendedSetting"-->
            <!--android:drawableRight="@mipmap/user_arrow_right"/>-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#eeeeee" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/user_setting_cacheClean"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:textColor="@color/userChildTextBlack"
                android:text="@string/cacheClean"/>

            <TextView
                android:id="@+id/user_setting_cacheSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:text="110k"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />

        <TextView
            android:id="@+id/user_setting_editionUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/userChildTextBlack"
            android:text="@string/editionUpdate"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee" />


        <TextView
            android:id="@+id/user_setting_right"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:textColor="@color/userChildTextBlack"
            android:drawableRight="@mipmap/user_arrow_right"
            android:text="@string/aboutMe"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#eeeeee" />

        <TextView
            android:id="@+id/user_setting_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/userChildTextBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"/>

</LinearLayout>